content: Handle OutputSurface requests correctly.

If the compositor goes through a visible, invisible and visible sequence,
we would end up queuing 2 GpuChannelHost requests. In this case, the
OutputSurface request is handled when the first callback runs. So
instead of asserting that there is a pending OutputSurface request when
the response callback for the GpuChannel request runs, early out if the
OutputSurface request was already handled.

BUG=643852

Review-Url: https://codereview.chromium.org/2313683004
Cr-Commit-Position: refs/heads/master@{#416589}

Former-commit-id: 2010e7dd770842c852284502b4503c7843d05ff3